syntax = "proto3";

option csharp_namespace = "EmailService.Grpc";

service EmailService {
  rpc SendEmail(SendEmailRequest) returns (SendEmailResponse);
}


message SendEmailRequest {
  string toEmail = 1;
  string subject = 2;
  string viewName = 3;
  string modelJson = 4;
}

message SendEmailResponse {
  bool success = 1;
  string message = 2;
}


